# Docker-App-Script

./: .dockerignore  Dockerfile  kube_output.txt  kubernetes_deployment.yaml  pyproject.toml  script.py
data/output/: result.txt
