[project]
name = "docker-app-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["TD", "EM101", "T201", "D413"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
